AJS-1 minor changes

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/index.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/index.html
@@ -72,7 +72,7 @@
     <script src="bower_components/underscore.string/lib/underscore.string.js"></script>
 
 
-    <script src="bower_components/DataTables/media/js/jquery.dataTables.js"></script>
+    <!--script src="bower_components/DataTables/media/js/jquery.dataTables.js"></script-->
     <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
