worked on roles

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/index.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/openwms.css">
+    <link rel="stylesheet" href="styles/openwms-dark.css">
+    <link rel="stylesheet" href="styles/bootstrap-dark.css">
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
@@ -81,13 +83,15 @@
     <script src="scripts/models/openwms.core.users.model.js"></script>
 
     <script src="scripts/controllers/main.js"></script>
-    <!--script src="scripts/controllers/core-controllers.js"></script-->
     <script src="scripts/controllers/users.js"></script>
     <script src="scripts/controllers/roles.js"></script>
     <script src="scripts/controllers/modules.js"></script>
     <script src="scripts/controllers/preferences.js"></script>
     <script src="scripts/controllers/profile.js"></script>
     <script src="scripts/controllers/help.js"></script>
+
+    <script src="scripts/services/core-services.js"></script>
+
     <!-- endbuild -->
     <!-- endbuild -->
     <style>
