AJS-2: worked on roles management

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/index.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/index.html
@@ -22,6 +22,7 @@
     <!--link rel="stylesheet" href="styles/main.css"-->
     <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/icons/core-icons.css">
     <link rel="stylesheet" href="styles/openwms.css">
     <link rel="stylesheet" href="styles/openwms-viewports.css">
     <!--link rel="stylesheet" href="styles/openwms-light.css"-->
