--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
 /*
  * openwms.org, the Open Warehouse Management System.
@@ -30,124 +31,51 @@
 <html class="no-js lt-ie9" ng-app-root="/openwms"> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html class="no-js" ng-app-root="/openwms"> <!--<![endif]-->
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>OpenWMS.org</title>
+        <meta name="description" content="OpenWMS.org, the Open Warehouse Management System.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="bower_components/ng-grid/ng-grid.min.css">
-    <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/icons/core-icons.css">
-    <link rel="stylesheet" href="styles/openwms.css">
-    <link rel="stylesheet" href="styles/openwms-viewports.css">
-    <link rel="stylesheet" href="styles/openwms-light.css">
-    <!--
-    <link rel="stylesheet" href="styles/openwms-dark.css">
-    <link rel="stylesheet" href="styles/bootstrap-dark.css">
-    -->
+        <!-- build:css(.tmp) styles/main.css -->
+        <link rel="stylesheet" href="bower_components/ng-grid/ng-grid.min.css">
+        <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
+        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles/icons/core-icons.css">
+        <link rel="stylesheet" href="styles/openwms.css">
+        <link rel="stylesheet" href="styles/openwms-viewports.css">
+        <link rel="stylesheet" href="styles/openwms-light.css">
+        <!--
+        <link rel="stylesheet" href="styles/openwms-dark.css">
+        <link rel="stylesheet" href="styles/bootstrap-dark.css">
+        -->
 
-    <!--
--    <script src="bower_components/jquery/dist/jquery.js"></script>
--    <script src="bower_components/ng-file-upload/angular-file-upload-shim.min.js"></script>
--    <script src="bower_components/angular/angular.js"></script>
-    -->
+        <style>
+                /* correct mismatch between Bootstrap and Angular */
+            .nav, .pagination, .carousel a {
+                cursor: pointer;
+            }
+        </style>
 
-    <!-- build:js scripts/plugins.js -->
-    <!--
-    <script src="bower_components/bootstrap-sass/js/bootstrap-affix.js"></script>
-    <script src="bower_components/bootstrap-sass/js/bootstrap-alert.js"></script>
-    <script src="bower_components/bootstrap-sass/js/bootstrap-dropdown.js"></script>
-    <script src="bower_components/bootstrap-sass/js/bootstrap-tooltip.js"></script>
-    <script src="bower_components/bootstrap-sass/js/bootstrap-modal.js"></script>
-    <script src="bower_components/bootstrap-sass/js/bootstrap-transition.js"></script>
-    <script src="bower_components/bootstrap-sass/js/bootstrap-button.js"></script>
-    <script src="bower_components/bootstrap-sass/js/bootstrap-popover.js"></script>
-    <script src="bower_components/bootstrap-sass/js/bootstrap-typeahead.js"></script>
-    <script src="bower_components/bootstrap-sass/js/bootstrap-carousel.js"></script>
-    <script src="bower_components/bootstrap-sass/js/bootstrap-scrollspy.js"></script>
-    <script src="bower_components/bootstrap-sass/js/bootstrap-collapse.js"></script>
-    <script src="bower_components/bootstrap-sass/js/bootstrap-tab.js"></script>
-    -->
-    <!-- endbuild -->
-
-    <!-- build:js scripts/modules.js -->
-    <!--
--    <script src="bower_components/angular-resource/angular-resource.js"></script>
--    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
--    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
--    <script src="bower_components/angular-animate/angular-animate.js"></script>
--    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
--    <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
--    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="bower_components/ng-grid/build/ng-grid.js"></script>
--    <script src="bower_components/ng-file-upload/angular-file-upload.min.js"></script>
-    -->
-    <!-- endbuild -->
-
-    <!--
--    <script src="bower_components/underscore/underscore-min.js"></script>
--    <script src="bower_components/underscore.string/lib/underscore.string.js"></script>
--    <script src="bower_components/angular-base64/angular-base64.js"></script>
-    -->
-
-    <!--script src="bower_components/DataTables/media/js/jquery.dataTables.js"></script-->
-    <!--
--    <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
-    -->
-
-    <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <!--
-    <script src="scripts/models/env.model.js"></script>
-    <script src="scripts/app.js"></script>
-
--    <script src="scripts/modules/openwms.module.core.js"></script>
--    <script src="scripts/services/openwms.service.core.js"></script>
--    <script src="scripts/controllers/openwms.controller.core.js"></script>
-    <script src="scripts/models/openwms.core.users.model.js"></script>
-
-    <script src="scripts/controllers/login.js"></script>
-    <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/users.js"></script>
-    <script src="scripts/controllers/roles.js"></script>
-    <script src="scripts/controllers/modules.js"></script>
-    <script src="scripts/controllers/preferences.js"></script>
-    <script src="scripts/controllers/profile.js"></script>
-    <script src="scripts/controllers/help.js"></script>
-
-    <script src="scripts/services/core-service.js"></script>
-    -->
-    <!-- endbuild -->
-    <!-- endbuild -->
-    <style>
-            /* correct mismatch between Bootstrap and Angular */
-        .nav, .pagination, .carousel a {
-            cursor: pointer;
-        }
-    </style>
-
-</head>
-<body>
+    </head>
+    <body>
 <!--[if lt IE 7]>
-<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a>
-    to improve your experience.</p>
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a>
+            to improve your experience.</p>
 <![endif]-->
 
 <!--[if lt IE 9]>
-<script src="bower_components/es5-shim/es5-shim.js"></script>
-<script src="bower_components/json3/lib/json3.min.js"></script>
+        <script src="bower_components/es5-shim/es5-shim.js"></script>
+        <script src="bower_components/json3/lib/json3.min.js"></script>
 <![endif]-->
 
-<!-- Add your site or application content here -->
-<div ng-include src="'views/main.html'" class=""></div>
+        <div ng-include src="'views/main.html'" class=""></div>
 
-<script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
-</body>
+        <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
+    </body>
 </html>
