AJS-27 - AJS: (CORE) Introduce dynamic loading of modules at runtime

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
@@ -54,6 +54,7 @@
         <link rel="stylesheet" href="styles/openwms-dark.css">
         <link rel="stylesheet" href="styles/bootstrap-dark.css">
         -->
+        <link rel="stylesheet" href="styles/project.css">
 
         <style>
                 /* correct mismatch between Bootstrap and Angular */
