AJS-27 - AJS: (CORE) Introduce dynamic loading of modules at runtime After introducing the lazy loading mechanism this is the first version where dynamic loading of users is working

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
@@ -33,7 +33,7 @@
 <html class="no-js" ng-app-root="/openwms"> <!--<![endif]-->
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>OpenWMS.org</title>
         <meta name="description" content="OpenWMS.org, the Open Warehouse Management System.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -64,7 +64,8 @@
         </style>
 
     </head>
-    <body>
+<!-- todo: whats this for: -->
+    <body data-ng-cloak="">
 <!--[if lt IE 7]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a>
             to improve your experience.</p>
@@ -77,6 +78,6 @@
 
         <div ng-include src="'views/main.html'" class=""></div>
 
-        <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
+        <script src="bower_components/requirejs/require.js" data-main="scripts/main" />
     </body>
 </html>
