--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
@@ -78,6 +78,6 @@
 
         <div ng-include src="'views/main.html'" class=""></div>
 
-        <script src="bower_components/requirejs/require.js" data-main="scripts/main" />
+        <script type="text/javascript" src="bower_components/requirejs/require.js" data-main="scripts/main"></script>
     </body>
 </html>
