ST-84 - worked on offering screen

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
@@ -45,6 +45,7 @@
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
+        <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css">
         <link rel="stylesheet" href="styles/styles.css">
         <link rel="stylesheet" href="styles/icons/core-icons.css">
         <link rel="stylesheet" href="styles/openwms.css">
