Implemented InventoryService add TableGroup

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
@@ -51,6 +51,7 @@
         <link rel="stylesheet" href="styles/openwms.css">
         <link rel="stylesheet" href="styles/openwms-viewports.css">
         <link rel="stylesheet" href="styles/openwms-light.css">
+        <link rel="stylesheet" href="bower_components/pick-a-color/build/1.2.3/css/pick-a-color-1.2.3.min.css">
         <!--
         <link rel="stylesheet" href="styles/openwms-dark.css">
         <link rel="stylesheet" href="styles/bootstrap-dark.css">
