added android meta-tag into header, minor formatting

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
@@ -37,6 +37,7 @@
         <title>OpenWMS.org</title>
         <meta name="description" content="OpenWMS.org, the Open Warehouse Management System.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+        <meta name="theme-color" content="#3F51B5">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- build:css(.tmp) styles/main.css -->
