--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
@@ -1,27 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-/*
- * openwms.org, the Open Warehouse Management System.
- * Copyright (C) 2014 Heiko Scherrer
- *
- * This file is part of openwms.org.
- *
- * openwms.org is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as
- * published by the Free Software Foundation; either version 2 of the
- * License, or (at your option) any later version.
- *
- * openwms.org is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this software. If not, write to the Free Software
- * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
- * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
- */
--->
 <!doctype html>
 <!--[if lt IE 7]>
 <html class="no-js lt-ie9 lt-ie8 lt-ie7" ng-app-root="/openwms"> <![endif]-->
@@ -47,12 +24,12 @@
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
         <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css">
+        <link rel="stylesheet" href="bower_components/jquery-minicolors/jquery.minicolors.css">
         <link rel="stylesheet" href="styles/styles.css">
         <link rel="stylesheet" href="styles/icons/core-icons.css">
         <link rel="stylesheet" href="styles/openwms.css">
         <link rel="stylesheet" href="styles/openwms-viewports.css">
         <link rel="stylesheet" href="styles/openwms-light.css">
-        <link rel="stylesheet" href="bower_components/pick-a-color/build/1.2.3/css/pick-a-color-1.2.3.min.css">
         <!--
         <link rel="stylesheet" href="styles/openwms-dark.css">
         <link rel="stylesheet" href="styles/bootstrap-dark.css">
