- added support for Polymer - replaces some hardcoded urls with constants to be overridden by projects - CoreService now uses a `ResponsedataResolver` to translate server responses; added a default implementation - fixed layout issue on Login screen - removed duplicate header-view div

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
@@ -34,6 +34,7 @@
         <link rel="stylesheet" href="styles/bootstrap-dark.css">
         -->
         <link rel="stylesheet" href="styles/project.css">
+        <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 
         <style>
                 /* correct mismatch between Bootstrap and Angular */
