worked on security support for BASIC auth in addition to token based auth and added some UI libs for materialized design

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
@@ -24,6 +24,14 @@
         <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
         <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css">
         <link rel="stylesheet" href="bower_components/jquery-minicolors/jquery.minicolors.css">
+        <link rel="stylesheet" href="bower_components/bootstrap-treeview/dist/bootstrap-treeview.min.css">
+
+        <!-- Add material design -->
+        <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/material.min.css">
+        <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/material-fullpalette.min.css">
+        <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/ripples.min.css">
+        <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/roboto.min.css">
+
         <link rel="stylesheet" href="styles/styles.css">
         <link rel="stylesheet" href="styles/icons/core-icons.css">
         <link rel="stylesheet" href="styles/openwms.css">
@@ -34,7 +42,6 @@
         <link rel="stylesheet" href="styles/bootstrap-dark.css">
         -->
         <link rel="stylesheet" href="styles/project.css">
-        <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 
         <style>
                 /* correct mismatch between Bootstrap and Angular */
