fixed material design

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
@@ -20,17 +20,16 @@
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+        <!--link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css"-->
         <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
         <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css">
         <link rel="stylesheet" href="bower_components/jquery-minicolors/jquery.minicolors.css">
         <link rel="stylesheet" href="bower_components/bootstrap-treeview/dist/bootstrap-treeview.min.css">
 
         <!-- Add material design -->
-        <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/material.min.css">
+        <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/roboto.min.css">
         <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/material-fullpalette.min.css">
         <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/ripples.min.css">
-        <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/roboto.min.css">
 
         <link rel="stylesheet" href="styles/styles.css">
         <link rel="stylesheet" href="styles/icons/core-icons.css">
