added tree component

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/index.html
@@ -24,7 +24,7 @@
         <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
         <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css">
         <link rel="stylesheet" href="bower_components/jquery-minicolors/jquery.minicolors.css">
-        <link rel="stylesheet" href="bower_components/bootstrap-treeview/dist/bootstrap-treeview.min.css">
+        <link rel="stylesheet" href="bower_components/angular-bootstrap-nav-tree/dist/abn_tree.css">
 
         <!-- Add material design -->
         <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/roboto.min.css">
