--- a/dependency-convergence.html
+++ b/dependency-convergence.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>OpenWMS.org CORE BOM - Reactor Dependency Convergence</title>
+    <title>org.openwms.core.test - Reactor Dependency Convergence</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                OpenWMS.org CORE BOM
+                org.openwms.core.test
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="OpenWMS.org CORE BOM">OpenWMS.org CORE BOM</a>
+            <div class="xright">                    <a href="./" title="org.openwms.core.test">org.openwms.core.test</a>
               
                     
       </div>
@@ -45,7 +45,7 @@
                                 <h5>Parent Project</h5>
                   <ul>
                   <li class="none">
-                          <a href="index.html" title="OpenWMS.org CORE">OpenWMS.org CORE</a>
+                          <a href="../index.html" title="OpenWMS.org CORE">OpenWMS.org CORE</a>
             </li>
           </ul>
                        <h5>Project Documentation</h5>
@@ -216,7 +216,7 @@
 <td width="25%">1.7-SNAPSHOT</td>
 <td>
 <ol style="list-style-type: decimal">
-<li>org.openwms:org.openwms.core.test:jar:1.1.0-SNAPSHOT<br />\-&#160;io.interface21:ameba-lib:jar:1.7-SNAPSHOT:compile<br /></li><br /></ol></td></tr></table></td></tr></table></div></div>
+<li>org.openwms:org.openwms.core.util:jar:1.1.0-SNAPSHOT<br />+-&#160;org.openwms:org.openwms.core.test:test-jar:tests:1.1.0-SNAPSHOT:test<br />|&#160;&#160;\-&#160;(io.interface21:ameba-lib:jar:1.7-SNAPSHOT:test - omitted for duplicate)<br />\-&#160;io.interface21:ameba-lib:jar:1.7-SNAPSHOT:compile<br /></li><br /></ol></td></tr></table></td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
