--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>OpenWMS.org CORE BOM - About</title>
+    <title>org.openwms.core.test - About</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                OpenWMS.org CORE BOM
+                org.openwms.core.test
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="OpenWMS.org CORE BOM">OpenWMS.org CORE BOM</a>
+            <div class="xright">                    <a href="./" title="org.openwms.core.test">org.openwms.core.test</a>
               
                     
       </div>
@@ -45,8 +45,8 @@
                                 <h5>Parent Project</h5>
                   <ul>
                   <li class="none">
-            <strong>OpenWMS.org CORE</strong>
-          </li>
+                          <a href="../index.html" title="OpenWMS.org CORE">OpenWMS.org CORE</a>
+            </li>
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
@@ -111,8 +111,8 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>About OpenWMS.org CORE BOM<a name="About_OpenWMS.org_CORE_BOM"></a></h2><a name="About_OpenWMS.org_CORE_BOM"></a>
-<p>The CORE project Maven POM file. Just a common definition of dependencies valid for all other CORE projects. Call mvn install -Pcore to build all CORE projects.</p></div>
+<h2>About org.openwms.core.test<a name="About_org.openwms.core.test"></a></h2><a name="About_org.openwms.core.test"></a>
+<p>A project that contains classes to support proper testing. Additionally some Spring configuration is provided that starts a Spring managed test environment.</p></div>
       </div>
     </div>
     <div class="clear">
