--- a/project-info.html
+++ b/project-info.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>OpenWMS.org CORE BOM - Project Information</title>
+    <title>org.openwms.core.test - Project Information</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                OpenWMS.org CORE BOM
+                org.openwms.core.test
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="OpenWMS.org CORE BOM">OpenWMS.org CORE BOM</a>
+            <div class="xright">                    <a href="./" title="org.openwms.core.test">org.openwms.core.test</a>
               
                     
       </div>
@@ -45,7 +45,7 @@
                                 <h5>Parent Project</h5>
                   <ul>
                   <li class="none">
-                          <a href="index.html" title="OpenWMS.org CORE">OpenWMS.org CORE</a>
+                          <a href="../index.html" title="OpenWMS.org CORE">OpenWMS.org CORE</a>
             </li>
           </ul>
                        <h5>Project Documentation</h5>
@@ -139,7 +139,7 @@
 <td>This document provides informations on the distribution management of this project.</td></tr>
 <tr class="b">
 <td><a href="index.html">About</a></td>
-<td>The CORE project Maven POM file. Just a common definition of dependencies valid for all other CORE projects. Call mvn install -Pcore to build all CORE projects.</td></tr>
+<td>A project that contains classes to support proper testing. Additionally some Spring configuration is provided that starts a Spring managed test environment.</td></tr>
 <tr class="a">
 <td><a href="issue-tracking.html">Issue Management</a></td>
 <td>This document provides information on the issue management system used in this project.</td></tr>
