--- a/project-summary.html
+++ b/project-summary.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>OpenWMS.org CORE BOM - Project Summary</title>
+    <title>org.openwms.core.test - Project Summary</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                OpenWMS.org CORE BOM
+                org.openwms.core.test
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="OpenWMS.org CORE BOM">OpenWMS.org CORE BOM</a>
+            <div class="xright">                    <a href="./" title="org.openwms.core.test">org.openwms.core.test</a>
               
                     
       </div>
@@ -45,7 +45,7 @@
                                 <h5>Parent Project</h5>
                   <ul>
                   <li class="none">
-                          <a href="index.html" title="OpenWMS.org CORE">OpenWMS.org CORE</a>
+                          <a href="../index.html" title="OpenWMS.org CORE">OpenWMS.org CORE</a>
             </li>
           </ul>
                        <h5>Project Documentation</h5>
@@ -120,13 +120,13 @@
 <th>Value</th></tr>
 <tr class="b">
 <td>Name</td>
-<td>OpenWMS.org CORE BOM</td></tr>
+<td>org.openwms.core.test</td></tr>
 <tr class="a">
 <td>Description</td>
-<td>The CORE project Maven POM file. Just a common definition of dependencies valid for all other CORE projects. Call mvn install -Pcore to build all CORE projects.</td></tr>
+<td>A project that contains classes to support proper testing. Additionally some Spring configuration is provided that starts a Spring managed test environment.</td></tr>
 <tr class="b">
 <td>Homepage</td>
-<td><a class="externalLink" href="http://www.openwms.org/org.openwms.core/org.openwms.core.bom">http://www.openwms.org/org.openwms.core/org.openwms.core.bom</a></td></tr></table></div>
+<td><a class="externalLink" href="http://www.openwms.org/org.openwms.core/org.openwms.core.test">http://www.openwms.org/org.openwms.core/org.openwms.core.test</a></td></tr></table></div>
 <div class="section">
 <h3>Project Organization<a name="Project_Organization"></a></h3><a name="Project_Organization"></a>
 <table border="0" class="bodyTable">
@@ -150,13 +150,16 @@
 <td>org.openwms</td></tr>
 <tr class="a">
 <td>ArtifactId</td>
-<td>org.openwms.core.bom</td></tr>
+<td>org.openwms.core.test</td></tr>
 <tr class="b">
 <td>Version</td>
 <td>1.1.0-SNAPSHOT</td></tr>
 <tr class="a">
 <td>Type</td>
-<td>pom</td></tr></table></div></div>
+<td>jar</td></tr>
+<tr class="b">
+<td>Java Version</td>
+<td>1.8</td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
