--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>org.openwms.core.test - About</title>
+    <title>org.openwms.core.util - About</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                org.openwms.core.test
+                org.openwms.core.util
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="org.openwms.core.test">org.openwms.core.test</a>
+            <div class="xright">                    <a href="./" title="org.openwms.core.util">org.openwms.core.util</a>
               
                     
       </div>
@@ -111,8 +111,8 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>About org.openwms.core.test<a name="About_org.openwms.core.test"></a></h2><a name="About_org.openwms.core.test"></a>
-<p>A project that contains classes to support proper testing. Additionally some Spring configuration is provided that starts a Spring managed test environment.</p></div>
+<h2>About org.openwms.core.util<a name="About_org.openwms.core.util"></a></h2><a name="About_org.openwms.core.util"></a>
+<p>A project that contains utility classes, exception types, common event types that are used by all other projects.</p></div>
       </div>
     </div>
     <div class="clear">
