--- a/dependency-management.html
+++ b/dependency-management.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>org.openwms.core.search - Project Dependency Management</title>
+    <title>org.openwms.core.uaa - Project Dependency Management</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                org.openwms.core.search
+                org.openwms.core.uaa
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="org.openwms.core.search">org.openwms.core.search</a>
+            <div class="xright">                    <a href="./" title="org.openwms.core.uaa">org.openwms.core.uaa</a>
               
                     
       </div>
@@ -602,6 +602,30 @@
 <td>1.1.0</td>
 <td>jar</td>
 <td><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a></td></tr>
+<tr class="b">
+<td>com.querydsl</td>
+<td><a class="externalLink" href="http://www.querydsl.com">querydsl-apt</a></td>
+<td>4.1.2</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a></td></tr>
+<tr class="a">
+<td>com.querydsl</td>
+<td><a class="externalLink" href="http://www.querydsl.com">querydsl-codegen</a></td>
+<td>4.1.2</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a></td></tr>
+<tr class="b">
+<td>com.querydsl</td>
+<td><a class="externalLink" href="http://www.querydsl.com">querydsl-core</a></td>
+<td>4.1.2</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a></td></tr>
+<tr class="a">
+<td>com.querydsl</td>
+<td><a class="externalLink" href="http://www.querydsl.com">querydsl-jpa</a></td>
+<td>4.1.2</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a></td></tr>
 <tr class="b">
 <td>com.samskivert</td>
 <td><a class="externalLink" href="http://github.com/samskivert/jmustache">jmustache</a></td>
@@ -1818,7 +1842,7 @@
 <tr class="b">
 <td>org.hibernate</td>
 <td><a class="externalLink" href="http://hibernate.org">hibernate-core</a></td>
-<td>5.0.9.Final</td>
+<td>5.1.0.Final</td>
 <td>jar</td>
 <td><a class="externalLink" href="http://www.gnu.org/licenses/lgpl-2.1.html">GNU Lesser General Public License</a></td></tr>
 <tr class="a">
