--- a/distribution-management.html
+++ b/distribution-management.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>org.openwms.common.comm - Project Distribution Management</title>
+    <title>OpenWMS.org TMS - Project Distribution Management</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                org.openwms.common.comm
+                OpenWMS.org TMS
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="org.openwms.common.comm">org.openwms.common.comm</a>
+            <div class="xright">                    <a href="./" title="OpenWMS.org TMS">OpenWMS.org TMS</a>
               
                     
       </div>
@@ -45,12 +45,18 @@
                                 <h5>Parent Project</h5>
                   <ul>
                   <li class="none">
-                          <a href="../index.html" title="OpenWMS.org COMMON">OpenWMS.org COMMON</a>
+                          <a href="../index.html" title="OpenWMS.org Project">OpenWMS.org Project</a>
+            </li>
+          </ul>
+                       <h5>Modules</h5>
+                  <ul>
+                  <li class="none">
+                          <a href="org.openwms.tms.transportation/index.html" title="org.openwms.tms.transportation">org.openwms.tms.transportation</a>
             </li>
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                                                                                                                          <li class="expanded">
+                                                                                                                                                                                                                                                                                                                                                            <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
@@ -82,6 +88,9 @@
             </li>
                       <li class="none">
                           <a href="mail-lists.html" title="Mailing Lists">Mailing Lists</a>
+            </li>
+                      <li class="none">
+                          <a href="modules.html" title="Project Modules">Project Modules</a>
             </li>
                       <li class="none">
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
@@ -121,7 +130,7 @@
 <p>${distribution.repo.serverProtocol}://${distribution.repo.snapshot.serverUrl.rootPath}</p></div>
 <div class="section">
 <h3>Site - ${distribution.serverId}<a name="Site_-_distribution.serverId"></a></h3><a name="Site_-_distribution.serverId"></a>
-<p>${distribution.serverProtocol}://${distribution.serverUrl.sourcePath}/org.openwms.common/org.openwms.common.comm</p></div></div>
+<p>${distribution.serverProtocol}://${distribution.serverUrl.sourcePath}/org.openwms.tms</p></div></div>
       </div>
     </div>
     <div class="clear">
