--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>org.openwms.common.comm - About</title>
+    <title>OpenWMS.org TMS - About</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                org.openwms.common.comm
+                OpenWMS.org TMS
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="org.openwms.common.comm">org.openwms.common.comm</a>
+            <div class="xright">                    <a href="./" title="OpenWMS.org TMS">OpenWMS.org TMS</a>
               
                     
       </div>
@@ -45,12 +45,18 @@
                                 <h5>Parent Project</h5>
                   <ul>
                   <li class="none">
-                          <a href="../index.html" title="OpenWMS.org COMMON">OpenWMS.org COMMON</a>
+                          <a href="../index.html" title="OpenWMS.org Project">OpenWMS.org Project</a>
+            </li>
+          </ul>
+                       <h5>Modules</h5>
+                  <ul>
+                  <li class="none">
+                          <a href="org.openwms.tms.transportation/index.html" title="org.openwms.tms.transportation">org.openwms.tms.transportation</a>
             </li>
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                                                                                                                          <li class="expanded">
+                                                                                                                                                                                                                                                                                                                                                            <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
@@ -84,6 +90,9 @@
                           <a href="mail-lists.html" title="Mailing Lists">Mailing Lists</a>
             </li>
                       <li class="none">
+                          <a href="modules.html" title="Project Modules">Project Modules</a>
+            </li>
+                      <li class="none">
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
             </li>
                       <li class="none">
@@ -111,8 +120,18 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>About org.openwms.common.comm<a name="About_org.openwms.common.comm"></a></h2><a name="About_org.openwms.common.comm"></a>
-<p>OpenWMS.org is an open source warehouse management software</p></div>
+<h2>About OpenWMS.org TMS<a name="About_OpenWMS.org_TMS"></a></h2><a name="About_OpenWMS.org_TMS"></a>
+<p>OpenWMS.org is an open source warehouse management software</p>
+<div class="section">
+<h3>Project Modules<a name="Project_Modules"></a></h3><a name="Project_Modules"></a>
+<p>This project has declared the following modules:</p>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>Name</th>
+<th>Description</th></tr>
+<tr class="b">
+<td><a href="org.openwms.tms.transportation/index.html">org.openwms.tms.transportation</a></td>
+<td>OpenWMS.org is an open source warehouse management software</td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
