--- a/modules.html
+++ b/modules.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>OpenWMS.org TMS - CI Management</title>
+    <title>OpenWMS.org TMS - Project Modules</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -60,8 +60,8 @@
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
-            <strong>CI Management</strong>
-          </li>
+                          <a href="integration.html" title="CI Management">CI Management</a>
+            </li>
                       <li class="none">
                           <a href="dependencies.html" title="Dependencies">Dependencies</a>
             </li>
@@ -90,8 +90,8 @@
                           <a href="mail-lists.html" title="Mailing Lists">Mailing Lists</a>
             </li>
                       <li class="none">
-                          <a href="modules.html" title="Project Modules">Project Modules</a>
-            </li>
+            <strong>Project Modules</strong>
+          </li>
                       <li class="none">
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
             </li>
@@ -120,25 +120,15 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>Overview<a name="Overview"></a></h2><a name="Overview"></a>
-<p>This project uses <a class="externalLink" href="http://jenkins-ci.org/">Jenkins</a>.</p></div>
-<div class="section">
-<h2>Access<a name="Access"></a></h2><a name="Access"></a>
-<p>The following is a link to the continuous integration system used by the project:</p>
-<div class="source">
-<pre><a class="externalLink" href="https://openwms.mooo.com:81/jenkins">https://openwms.mooo.com:81/jenkins</a></pre></div></div>
-<div class="section">
-<h2>Notifiers<a name="Notifiers"></a></h2><a name="Notifiers"></a>
-<p>Configuration for notifying developers/users when a build is unsuccessful, including user information and notification mode.</p>
+<h2>Project Modules<a name="Project_Modules"></a></h2><a name="Project_Modules"></a>
+<p>This project has declared the following modules:</p>
 <table border="0" class="bodyTable">
 <tr class="a">
-<th>Type</th>
-<th>Address</th>
-<th>Configuration</th></tr>
+<th>Name</th>
+<th>Description</th></tr>
 <tr class="b">
-<td>mail</td>
-<td>-</td>
-<td>address=product@openwms.org</td></tr></table></div>
+<td><a href="org.openwms.tms.transportation/index.html">org.openwms.tms.transportation</a></td>
+<td>OpenWMS.org is an open source warehouse management software</td></tr></table></div>
       </div>
     </div>
     <div class="clear">
